Fix for 100vh on mobiles

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 html, body {
   background: black;
   width: 100vw;
-  height: 100vh;
+  height: 100%; /* Using 100% because 100vh on mobiles will not include the navbar*/
 }
 
 #root {
@@ -15,41 +15,6 @@ html, body {
   overflow: hidden;
   height: 100%;
   width: 100%;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 canvas {
